--- a/coffee-house/styles/styles.css
+++ b/coffee-house/styles/styles.css
@@ -32,7 +32,7 @@ img {
   margin: 0 auto;
 }
 
-/* .main-header {
+.main-header {
   display: flex;
   justify-content: space-between;
   min-height: 80px;
@@ -66,4 +66,4 @@ img {
 .main-nav .item a {
   text-decoration: none;
   color: var(--color-text-dark);
-} */
+}
