feat: add favourites block

--- a/coffee-house/styles/styles.css
+++ b/coffee-house/styles/styles.css
@@ -32,17 +32,28 @@ img {
   margin: 0 auto;
 }
 
-.primary-heading {
+.heading-primary {
     color: var(--color-text-light);
     font-size: var(--font-size-heading-1);
+    margin: 0;
     font-weight: 600;
-    font-style: italic;
     line-height: var(--height-heading-1);
 }
 
-.primary-heading span {
+.heading-secondary {
+    text-align: center;
+    color: var(--color-text-dark);
+    font-size: var(--font-size-heading-2);
+    margin: 0;
+    margin-bottom: 40px;
+    font-weight: 500;
+    line-height: var(--height-heading-2);
+}
+
+.heading-secondary span, .heading-primary span {
     display: inline-flex;;
     color: var(--color-text-accent);
+    font-style: italic;
 }
 
 .button-primary {
@@ -114,8 +125,9 @@ img {
     width: 100%;
     min-height: 644px;
     border-radius: 40px;
-    padding: 0 100px;
+    padding: 100px 100px;
     background-image: url('../assets/img/img-hero.jpg');
+    margin-bottom: 100px;
 }
 
 .enjoy .container  {
@@ -127,3 +139,47 @@ img {
     color: var(--color-text-light);
     margin-bottom: 40px;
 }
+
+/* favourites block */
+
+.favourites-coffee {
+    min-height: 800px;
+}
+
+.favourites-coffee .slider {
+    position: relative;
+    min-height: 685px;
+}
+
+.favourites-coffee .slider .arrow {
+    background: transparent;
+    border: 0;
+}
+
+.favourites-coffee .slider .control {
+    position: absolute;
+    left: calc(94% + 49px);
+    top: calc(50% - 62px);
+}
+
+.favourites-coffee .slider .control.left {
+    left: 0;
+}
+
+.favourites-coffee .slider .list {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.favourites-coffee .slider .item {
+    max-width: 480px;
+}
+
+.favourites-coffee .slider .content {
+    text-align: center;
+}
+
+
+
