--- a/coffee-house/styles/styles.css
+++ b/coffee-house/styles/styles.css
@@ -33,10 +33,15 @@ img {
   box-sizing: border-box;
   background-color: var(--color-bg-body);
   padding: 0 40px;
-  width: 1440px;
+  max-width: 1440px;
   margin: 0 auto;
 }
 
+@media screen and (max-width: 480px) {
+  .main-container {
+    padding: 0 16px;
+  }
+}
 /* Headings */
 
 .heading-primary {
@@ -55,6 +60,12 @@ img {
   margin-bottom: 40px;
   font-weight: 500;
   line-height: var(--height-heading-2);
+}
+
+@media screen and (max-width: 680px) {
+  .heading-secondary {
+    font-size: 32px;
+  }
 }
 
 .heading-secondary span,
@@ -173,7 +184,7 @@ img {
 }
 
 .link.--disabled {
-  pointer-events: none; 
+  pointer-events: none;
   cursor: auto;
 }
 
@@ -233,26 +244,37 @@ img {
 }
 
 .app-button:hover path {
- fill: var(--color-bg-body);
+  fill: var(--color-bg-body);
 }
 /* Header */
 
 .main-header {
   display: flex;
-  justify-content: space-between;
   padding: 19px 0;
 }
 
 .main-header .container {
+  position: relative;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
+.main-header .logo {
+  margin-right: 20px;
+}
+
 .main-header .logo img {
   width: 100px;
   height: auto;
+}
+
+.nav-container {
+  display: flex;
+  max-width: 895px;
+  justify-content: space-between;
+  flex-grow: 1;
 }
 
 .main-nav .list {
@@ -271,6 +293,31 @@ img {
   text-decoration: none;
   color: var(--color-text-dark);
 }
+.nav-toggle-block .nav-toggle-button {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .nav-container {
+    position: absolute;
+    top: calc(100% + 4px);
+    background: var(--color-bg-body);
+    left: 0;
+    right: 0;
+    flex-direction: column;
+    height: calc(100vh - 78px - 4px);
+  }
+  .main-header .nav-container:not(.-active) {
+    display: none;
+  }
+
+  .nav-toggle-block .nav-toggle-button {
+    margin-right: -5px;
+    display: block;
+    background: transparent;
+    border: 0;
+  }
+}
 
 /* Enjoy section */
 
@@ -285,7 +332,7 @@ img {
 }
 
 .enjoy .container {
-  width: 530px;
+  max-width: 530px;
 }
 
 .enjoy .description {
@@ -296,13 +343,59 @@ img {
   line-height: 150%;
 }
 
+@media screen and (max-width: 820px) {
+  .enjoy {
+    padding: 100px 60px;
+  }
+}
+
+@media screen and (max-width: 735px) {
+  .enjoy .heading-primary {
+    font-size: 62px;
+  }
+  .enjoy {
+    padding: 80px 60px;
+  }
+}
+
+@media screen and (max-width: 635px) {
+  .enjoy .heading-primary {
+    font-size: 42px;
+    line-height: 115%;
+  }
+
+  .enjoy {
+    padding: 80px 50px;
+  }
+}
+
+@media screen and (max-width: 535px) {
+  .enjoy .heading-primary {
+    font-size: 42px;
+  }
+  .enjoy {
+    padding: 70px 30px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: scroll;
+    background-position: center;
+  }
+}
+
+@media screen and (max-width: 380px) {
+
+  .enjoy {
+    padding: 60px 16px;
+  }
+}
+
 /* Favourites section */
 .favourites-coffee {
   margin-bottom: 100px;
 }
 .favourites-coffee .slider {
   position: relative;
-  min-height: 685px;
+  /* min-height: 685px; */
 }
 
 .favourites-coffee .slider .arrow {
@@ -313,7 +406,7 @@ img {
   width: 60px;
   height: 60px;
   border-radius: 100px;
-  border: 1px solid var(--border-dark, #665F55);
+  border: 1px solid var(--border-dark, #665f55);
   transition: all 0.5s ease-in-out;
 }
 
@@ -391,6 +484,16 @@ img {
   background-color: var(--color-border-dark);
 }
 
+@media screen and (max-width: 565px) {
+  .favourites-coffee .slider .arrow {
+    display: none;
+  }
+
+  .favourites-coffee {
+    margin-bottom: 100px;
+  }
+}
+
 /* About */
 
 .about {
@@ -414,6 +517,7 @@ img {
 .about .column-2 {
   display: flex;
   flex-direction: column;
+  max-width: 50%;
   gap: 40px;
 }
 
@@ -422,8 +526,13 @@ img {
   justify-content: center;
   align-items: center;
 }
+.about .heading-secondary span {
+  display: inline;
+
+}
 
 .about .grid-item img {
+  width: 100%;
   transform: scale(1.1);
   transition: transform 0.5s ease-in-out;
 }
@@ -437,16 +546,83 @@ img {
 }
 
 .grid-item.lg {
-  width: 660px;
-  height: 590px;
+  width: 100%;
   overflow: hidden;
+  aspect-ratio: 660 / 590;
 }
 
 .grid-item.sm {
-  width: 660px;
-  height: 430px;
+  width: 100%;
+  aspect-ratio: 660 / 430;
   overflow: hidden;
 }
+
+@media screen and (max-width: 768px) {
+  .about .grid-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+  }
+
+  .about .column-1,
+  .about .column-2 {
+    max-width: 100%;
+  }
+  .grid-item.lg {
+    width: 100%;
+    overflow: hidden;
+    aspect-ratio: 688 / 590;
+  }
+
+  .grid-item.sm {
+    display: none;
+  }
+
+  .about .heading-secondary {
+    line-height: 125%;
+  }
+
+  .about .grid-item img {
+    transform: scale(1.05);
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .about .heading-secondary {
+    font-size: 32px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .grid-item.lg {
+    width: 100%;
+    overflow: hidden;
+    aspect-ratio: auto;
+  }
+
+  .about .grid-item img {
+    width: auto;
+    height: 590px;
+    transform: scale(1.23);
+  }
+}
+
+
+/* @media screen and (max-width: 980px) {
+.about .grid-container {
+    flex-direction: column;
+  }
+
+.about .column-1,
+.about .column-2 {
+  max-width: 726px;
+  margin: 0 auto;
+}
+
+.about .column-2 {
+  display: none;
+}
+} */
 
 /* mobile-app */
 
@@ -482,6 +658,62 @@ img {
   margin-bottom: 38px;
 }
 
+@media screen and (max-width: 950px) {
+  .mobile-app {
+    flex-direction: column;
+    margin-bottom: 94px;
+    gap: 50px;
+  }
+
+  .mobile-app .content .wrapper {
+    max-width: 100%;
+  }
+
+  .mobile-app .content .heading-secondary {
+    margin-bottom: 45px;
+  }
+
+  .mobile-app .picture {
+    margin-left: 29px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .mobile-app {
+    align-items:flex-start;
+    gap: 100px;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .mobile-app .content .heading-secondary {
+    font-size: 32px;
+    margin-bottom: 40px;
+  }
+
+  .mobile-app .app-button {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .mobile-app {
+    flex-direction: column;
+    margin-bottom: 98px;
+    gap: 20px;
+  }
+
+  .mobile-app .picture {
+    max-width: 348px;
+    margin-left: 0;
+  }
+
+  .mobile-app .content .wrapper {
+    min-height: auto;
+  }
+}
+
+
 /* Menu-block */
 .menu {
   margin-bottom: 99px;
@@ -489,6 +721,10 @@ img {
 .menu .heading-secondary {
   max-width: 800px;
   margin-top: -2px;
+}
+
+.menu .heading-secondary span {
+  display: inline;
 }
 
 .menu-block-header {
@@ -549,12 +785,14 @@ img {
 }
 
 .tab-item.active button span,
-.tab-item:not(.active):hover button span  {
+.tab-item:not(.active):hover button span {
   background: var(--color-bg-body);
 }
 
 .products-list {
   display: flex;
+  align-items: center;
+  justify-content: center;
   gap: 40px;
   flex-wrap: wrap;
 }
@@ -604,27 +842,64 @@ img {
   transition: transform 0.5s ease-in-out;
 }
 
+.refresh-button-wrapper {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 100px;
+}
+
+.refresh-button {
+  width: 60px;
+  height: 60px;
+  background: transparent;
+  border-radius: 100px;
+  border: 1px solid var(--color-border-dark);
+}
+
+@media screen and (max-width: 768px) {
+  .product-card {
+    display: none;
+  }
+  .product-card:nth-child(-n+4) {
+    display: block;
+  }
+
+  .menu-grid {
+    margin-bottom: 40px;
+  }
+
+  .refresh-button-wrapper {
+    display: flex;
+  }
+}
+
 /* Main footer */
 
 .main-footer {
   width: 100%;
   margin-bottom: 40px;
-}
-
-.main-footer .left {
-  max-width: 530px;
-}
-
-.main-footer .right {
-  padding-top: 33px;
+  background-color: var(--color-bg-container);
+  border-radius: 40px;
 }
 
 .main-footer .container {
   display: flex;
-  gap: 100px;
-  background-color: var(--color-bg-container);
-  border-radius: 40px;
-  padding: 100px;
+  max-width: 1280px;
+  margin: 0 auto;
+  justify-content: space-between;
+  padding: 100px 60px;
+}
+
+.main-footer .left {
+  max-width: 530px;
+  margin-right: 20px;
+}
+
+.main-footer .right {
+  width: 530px;
+  padding-top: 33px;
 }
 
 .main-footer .heading-secondary {
@@ -703,4 +978,47 @@ img {
   font-weight: 600;
   line-height: 150%;
   margin-left: 8px;
+}
+
+@media screen and (max-width: 960px) {
+  .main-footer .container {
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 100px;
+  }
+
+  .main-footer .right {
+    width: 100%;
+    padding-top: 0;
+  }
+
+  .main-footer .contact-list .contact-item:last-of-type {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .main-footer .heading-secondary span {
+    display: inline;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .main-footer .heading-secondary span {
+    display: inline;
+  }
+
+  .main-footer .container {
+    padding: 60px 16px;
+    gap: 40px;
+  }
+
+  .main-footer .left {
+    max-width: 530px;
+    margin-right: 0;
+  }
+
+  .main-footer .right {
+    padding-top: 0;
+  }
 }
